Calculate precentage of variance represented by the first eigenvectors. Added some more explanations to pca chapter

--- a/latex/appendix.tex
+++ b/latex/appendix.tex
@@ -13,7 +13,7 @@
  Alle Bilder, die als Eingabe für die PCA verwendet wurden, sind in Abbildung \ref{all_images} zu finden. Im Folgenden sind die Bildquellen aufgezählt.
  Alle Tiere, die nicht aufgezählt sind, sind aus \cite{Spezielle_Zoologie} entnommen.
  \begin{itemize}
-  \item Archaeopteryx, Eusthenopteron, Ichthyosaurus, Ichthyostega, Muraenosaurus, Urpferdchen aus \cite{Zoologie24Wehner}
+  \item Archaeopteryx, Ichthyosaurus, Ichthyostega, Urpferdchen aus \cite{Zoologie24Wehner}
   \item Blauwal \url{https://www.quagga-illustrations.de/wp-content/uploads/2014/05/h0001705.jpg}
   \item Chamäleon \url{https://www.madcham.de/de/anatomie/}
   \item Dormedar \url{https://upload.wikimedia.org/wikipedia/commons/a/ac/Camel_Skeleton_-_Richard_Owen_-_On_the_Anatomy_of_Vertebrates_\%281866\%29.jpg}
@@ -24,7 +24,6 @@
   \item Pferd \url{https://www.kosmos.de/content/buecher/ratgeber/pferde-reiten/vorwaerts-abwaerts-eine-frage-der-haltung/}
   \item Schlange: zu Schlangen gibt es keine Bilder, die deren Skelett in ausgestrecktem Zustand von der Seite darstellen. Deshalb wurde ein leeres Bild genommen und der Verlauf des Rückens durch eine Gerade angenähert (Extremitäten besitzt eine Schlange nicht. Außerdem ist nicht erkennbar ob \bzw wo Hals in Rücken und Rücken in Schwanz übergeht. Deshalb wurde die komplette Wirbelsäule als Rücken markiert.)
   \item Schwan \url{https://www.alamy.de/skelett-eines-schwans-osteographia-oder-die-anatomie-der-knochen-london-1733-quelle-47-ich-12-kapitel-v-saitenhalter-autor-cheselden-william-image226921369.html}
-  \item Seekuh aus \cite{Zoologie25Wehner}
   \item Sinornis und Taube aus \cite{Vergleichende_Anatomie}
   \item Strauß \url{https://www.alamy.de/stockfoto-skelett-von-strauss-24658845.html}
   \item Tyrannosaurus Rex \url{https://upload.wikimedia.org/wikipedia/commons/9/9f/Tyrannosaurus_skeleton.jpg}
@@ -37,29 +36,29 @@
 \subfloat[Blauwal]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder_klein/Blauwal.jpg}}~
 \subfloat[Brachiosaurus]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder_klein/Brachiosaurus.jpg}}
 \\
-\subfloat[Chamaeleon]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder_klein/Chamaeleon.jpg}}~
+\subfloat[Chamäleon]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder_klein/Chamaeleon.jpg}}~
 \subfloat[Dimetrodon]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder_klein/Dimetrodon.jpg}}~
 \subfloat[Dromedar]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder_klein/Dromedar.jpg}}~
 \subfloat[Elster]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder_klein/Elster.jpg}}~
 \subfloat[Forelle]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder_klein/Forelle.jpg}}
 \\
 \subfloat[Frosch]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder_klein/Frosch.jpg}}~
-\subfloat[Gaemse]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder_klein/Gaemse.jpg}}~
+\subfloat[Gämse]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder_klein/Gaemse.jpg}}~
 \subfloat[Giraffe]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder_klein/Giraffe.jpg}}~
 \subfloat[Gnu]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder_klein/Gnu.jpg}}~
-\subfloat[Groenlandwal]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder_klein/Groenlandwal.jpg}}
+\subfloat[Grönlandwal]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder_klein/Groenlandwal.jpg}}
 \\
 \subfloat[Ichthyornis]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder_klein/Ichthyornis.jpg}}~
 \subfloat[Ichthyosaurus]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder_klein/Ichthyosaurus.jpg}}~
 \subfloat[Ichthyostega]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder_klein/Ichthyostega.jpg}}~
-\subfloat[Kaenguru]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder_klein/Kaenguru.jpg}}~
-\subfloat[Kaffernbueffel]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder_klein/Kaffernbueffel.jpg}}
+\subfloat[Känguru]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder_klein/Kaenguru.jpg}}~
+\subfloat[Kaffernbüffel]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder_klein/Kaffernbueffel.jpg}}
 \\
 \subfloat[Kaninchen]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder_klein/Kaninchen.jpg}}~
 \subfloat[Klippschliefer]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder_klein/Klippschliefer.jpg}}~
 \subfloat[Koboldmaki]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder_klein/Koboldmaki.jpg}}~
 \subfloat[Krokodil]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder_klein/Krokodil.jpg}}~
-\subfloat[Landschildkroete]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder_klein/Landschildkroete.jpg}}
+\subfloat[Landschildkröte]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder_klein/Landschildkroete.jpg}}
 \phantomcaption
 
 \end{figure}
@@ -210,7 +209,7 @@
    \qquad
    \subfloat[Dritter Punkt des Halses, x-Koordinate]{\includegraphics[width=0.3\textwidth]{../PCA/gnuplot/results_qq_diagrams/QQ_diagram4.pdf}}
    \qquad
-   \subfloat[Dritter Punkt des Hales, y-Koordinate]{\includegraphics[width=0.3\textwidth]{../PCA/gnuplot/results_qq_diagrams/QQ_diagram5.pdf}}
+   \subfloat[Dritter Punkt des Halses, y-Koordinate]{\includegraphics[width=0.3\textwidth]{../PCA/gnuplot/results_qq_diagrams/QQ_diagram5.pdf}}
    \\
    \subfloat[Erster Punkt des Rückens, x-Koordinate]{\includegraphics[width=0.3\textwidth]{../PCA/gnuplot/results_qq_diagrams/QQ_diagram6.pdf}}
    \qquad
@@ -298,6 +297,6 @@
    \qquad
    \subfloat[6+, \emph{Flügel} $0,11$, \emph{Beine} $1,3$, \emph{Gewicht} $98$kg]{\includegraphics[width=0.45\textwidth]{../PCA/sqrtEV_log_weight_downscaled_wings_legs_and_weight/EV6_pos.jpg}}
    
-   \caption{Datenpunkte im PCA-Koordinatensystem. Eine Koordinate nimmt den Wert der positiven (+) \bzw negativen (-) Standardabweichung in die entsprechende Richtung an, alle anderen sind null. Von oben nach unten sind die Erbenisse für den größten (1) bis zum sechstgrößten (6) Eigenwert dargestellt. \emph{Beine} steht für \emph{Beine mit Bodenkontakt}.}
+   \caption{Datenpunkte im PCA-Koordinatensystem. Eine Koordinate nimmt den Wert der positiven (+) \bzw negativen (-) Standardabweichung in die entsprechende Richtung an, alle anderen sind null. Von oben nach unten sind die Ergebnisse für den größten (1) bis zum sechstgrößten (6) Eigenwert dargestellt. \emph{Beine} steht für \emph{Beine mit Bodenkontakt}.}
    \label{pca_results_sqrtEV}
   \end{figure}
