--- a/latex/introduction.tex
+++ b/latex/introduction.tex
@@ -2,7 +2,7 @@
 %-------------------
 \chapter{Einleitung}
 
-Wirbeltiere sind allgegenwärtig, sowohl im alltäglichen Leben, als auch in Computerspielen und Filmen. Es besteht also ein stetiger Bedarf an 3D-Modellen von Wirbeltieren. Dieser wird in den meisten Fällen durch Künstler gedeckt, die viel Zeit und Arbeit in die Modelle stecken. Algorithmen, die diese Abläufe beispielsweise durch prozedurale Generierung vereinfachen könnten, gibt es nicht viele.
+Wirbeltiere sind allgegenwärtig, sowohl im alltäglichen Leben, als auch in Computerspielen und Filmen. Es besteht also ein stetiger Bedarf an 3D-Modellen von Wirbeltieren. Dieser wird in den meisten Fällen durch Künstler gedeckt, die viel Zeit und Arbeit in die Modelle stecken. Algorithmen, die diese Abläufe vereinfachen könnten, beispielsweise durch prozedurale Generierung, gibt es nicht viele.
 
 % Ziel
 Das Ziel dieser Arbeit ist es den Arbeitsaufwand der Künstler zu verringern, indem eine Möglichkeit geschaffen wird Wirbeltierskelette automatisiert zu generieren. Diese Skelette können dann die Grundlage für die Modellierung eines kompletten Wirbeltiers bilden.
