--- a/latex/basics.tex
+++ b/latex/basics.tex
@@ -6,6 +6,7 @@
 
 %--------------------------------
 \section{Prozedurale Generierung}
+\label{procedural_generation}
 
 Werden Inhalte, wie Texturen oder 3D-Objekte, generiert, ohne dass diese vor der Ausführung des Algorithmus festgelegt wurden, so wird dies als \emph{prozedurale Generierung} (PG) bezeichnet.
 Ursprünglich wurde PG verwendet, weil der Speicherplatz auf Computern sehr begrenzt war. Große 3D-Landschaften oder andere vorgefertigte künstlerische Werke konnten nicht gespeichert werden.\\
